fix: prevent title from covering user menu

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -216,7 +216,7 @@ header {
   top: 0;
   transition: 0.3s;
   width: 0;
-  z-index: 1;
+  z-index: 3;
 }
 
 .close-button {
